Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/DefAssignAfterTry3.out
DefAssignAfterTry3.java:32:28: compiler.err.var.might.not.have.been.initialized: i
1 error
